# jrnlapp

./: .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
jrnl-back/: .dockerignore  Cargo.toml  Dockerfile
jrnl-back/migrations/: 20241027212947_entry.down.sql  20241027212947_entry.up.sql  20241027212947_profiles.down.sql  20241027212947_profiles.up.sql  20241027212947_users.up.sql  20241027221351_entries.down.sql  20241027221351_entries.up.sql  20241027221351_entry.down.sql  20241027221351_entry.up.sql  20241027221351_profiles.down.sql  20241027221351_profiles.up.sql  20241028124258_groups.down.sql  20241028124258_groups.up.sql  20241103182039_sessions.down.sql  20241103182039_sessions.up.sql  20241103182756_temp_auth_sessions.down.sql  20241103182756_temp_auth_sessions.up.sql  20241109005535_active_entries.down.sql  20241109005535_active_entries.up.sql  20241114012432_mobile_nonce_oneshots.down.sql  20241114012432_mobile_nonce_oneshots.up.sql
jrnl-back/src/: error.rs  main.rs
jrnl-back/src/auth/: extension.rs  jwt.rs  mod.rs  providers.rs  routes.rs
jrnl-back/src/controllers/: auth.rs  auth_controller.rs  entry.rs  entry_controller.rs  group.rs  group_controller.rs  mod.rs  user.rs  user_controller.rs  well_known_controller.rs
jrnl-back/src/schemas/: active_entry.rs  entry.rs  group.rs  mod.rs  profile.rs  user.rs
jrnl-back/src/services/: auth_service.rs  entry_service.rs  group_service.rs  mod.rs  user_service.rs
jrnl-back/src/web/: auth.rs  cursor.rs  error.rs  mod.rs  providers.rs  result.rs  thiserror_status.rs
jrnl-back/static/: all_words_cleaned.txt
jrnl-front/: Dockerfile  app.vue  bun.lockb  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
jrnl-front-shared/: package.json
jrnl-front-shared/components/entry/: View.vue
jrnl-front-shared/components/form/: Button.vue  TextInput.vue
jrnl-front-shared/components/group/: Manage.vue
jrnl-front-shared/components/groups-list/: JoinForm.vue
jrnl-front-shared/components/today-entry/: TextEditor.vue
jrnl-front-shared/services/: group.service.ts
jrnl-front-shared/types/: group.type.ts
jrnl-front/app/: app.vue  error.vue
jrnl-front/app/assets/: themes.ts
jrnl-front/app/components/: ComponentErrorBoundary.vue  ErrorDisplay.vue  OnboardingTour.vue
jrnl-front/app/composables/: auth.composable.ts  group.composable.ts  theme.composable.ts  today-entry.composable.ts  user.composable.ts
jrnl-front/app/layouts/: default.vue
jrnl-front/app/middleware/: auth.middleware.global.ts
jrnl-front/app/pages/: current.vue  index.vue  page.vue  pages.vue
jrnl-front/app/services/: auth.service.ts  entry.service.ts  user.service.ts
jrnl-front/app/types/: appleid-signin-api.type.ts  user.type.ts
jrnl-front/app/util/: all-meta.util.ts  index.util.ts
jrnl-front/assets/: themes.js
jrnl-front/components/: PastEntry.vue  TextEditor.vue  TimeUntilTomorrow.vue
jrnl-front/components/entries-list/: PastEntry.vue
jrnl-front/components/entry/: View.vue
jrnl-front/components/form/: Slider.vue  TextInput.vue
jrnl-front/components/group/: Manage.vue  Members.vue  MoodsByWeek.vue
jrnl-front/components/groups-list/: Card.vue  CreateForm.vue  JoinForm.vue
jrnl-front/components/navigator/: Desktop.vue  Links.vue  Logo.vue  Mobile.vue  Navigator.vue
jrnl-front/components/today-entry/: TextEditor.vue  TimeUntilTomorrow.vue
jrnl-front/composables/: auth.composable.ts  group.composable.ts  profile.composable.ts  theme.composable.ts  today-entry.composable.ts  user.composable.ts
jrnl-front/layouts/: default.vue
jrnl-front/middleware/: auth.middleware.global.ts  auth.middleware.ts
jrnl-front/pages/: color.vue  index.vue  login.vue  page.vue  pages.vue
jrnl-front/pages/(auth)/: confirm.vue  login.vue  logout.vue
jrnl-front/pages/entry/: [id].vue
jrnl-front/pages/groups/: [code].vue  index.vue
jrnl-front/plugins/: local-api.plugin.ts
jrnl-front/services/: auth.service.ts  entry.service.ts  group.service.ts  profile.service.ts  user.service.ts
jrnl-front/types/: entry.type.ts  profile.type.ts  user.type.ts  weekly-data.type.ts
jrnl-front/util/: index.util.ts
jrnl-ios/: bun.lockb  nuxt.config.ts  package.json  package.json.old  pnpm-lock.yaml  tailwind.config.ts
jrnl-ios/app/: app.vue  error.vue
jrnl-ios/app/components/: ComponentErrorBoundary.vue  ErrorDisplay.vue
jrnl-ios/app/composables/: auth.composable.ts  entries.composable.ts  group.composable.ts  local-entries.composable.ts  local-storage.composable.ts  local-today-entry.composable.ts  remote-entries.composable.ts  remote-today-entry.composable.ts  theme.composable.ts  today-entry.composable.ts  user.composable.ts
jrnl-ios/app/layouts/: default.vue
jrnl-ios/app/middleware/: auth.middleware.global.ts
jrnl-ios/app/pages/: current.vue  index.vue  splashscreen.vue  theme.vue
jrnl-ios/app/plugins/: local-api.plugin.ts
jrnl-ios/app/public/: splashscreen.html
jrnl-ios/app/services/: auth.service.ts  entry.service.ts  local-backend.service.ts  user.service.ts
jrnl-ios/app/types/: entry.type.ts
jrnl-ios/app/util/: all-meta.util.ts  index.util.ts  watch-error-and-throw.util.ts
jrnl-ios/src-tauri/: Cargo.toml  tauri.conf.json
jrnl-ios/src-tauri/capabilities/: default.json
jrnl-ios/src-tauri/src/: context.rs  dto.rs  error.rs  lib.rs  main.rs
jrnl-nuxt-shared-layer/: nuxt.config.ts  package.json  pnpm-lock.yaml
jrnl-nuxt-shared-layer/app/: error.vue
jrnl-nuxt-shared-layer/app/components/: ErrorDisplay.vue
jrnl-nuxt-shared-layer/app/composables/: auth.composable.ts  (+2 more)
logo/: favicon-settings.json  outputdata.json  ps-logo.psd
logo/icons/: site.webmanifest
tauri-plugin-google-signin/: Cargo.toml  build.rs
tauri-plugin-google-signin/guest-js/: index.ts
tauri-plugin-google-signin/ios/: Package.swift
tauri-plugin-google-signin/src/: commands.rs  desktop.rs  mobile.rs  models.rs
(+90 files in other folders)
