[package]
name = "jrnl-back"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = { version = "0.7.7", features = ["json"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
chrono-tz = "0.10.0"
rand = "0.8.5"
base64 = "0.22.1"
thiserror = "1.0.65"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
ammonia = "4.0.0"
oauth2 = "4.4.2"

[lib]
name = "thiserror_status"
proc-macro = true
path = "src/web/thiserror_status.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "warn"
nursery = "warn"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
nonstandard-style = "warn"
