[package]
name = "jrnl-back"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }

axum = { version = "0.7.7", features = ["json"] }
tower-http = { version = "0.6.1", features = ["cors", "timeout"] }
tower = "0.5.1"

sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["json"] }

anyhow = "1.0.93"
thiserror = "2.0.2"
jsonwebtoken = "9.3.0"

dotenvy = "0.15.7"
rand = "0.8.5"
ammonia = "4.0.0"
base64 = "0.22.1"

proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
aes-gcm = "0.10.3"

[lib]
name = "thiserror_status"
proc-macro = true
path = "src/web/thiserror_status.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "warn"
nursery = "warn"
module-name-repetitions = { level = "allow", priority = 30 }
declare-interior-mutable-const = { level = "allow", priority = 30 }
borrow-interior-mutable-const = { level = "allow", priority = 30 }

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
nonstandard-style = "warn"
