cargo-features = ["trim-paths"]

[package]
name = "jrnl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jrnl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }

tauri-plugin-store = "2.1.0"
tauri-plugin-http = "2.0.3"
tauri-plugin-fs = "2.0.3"
tauri-plugin-sign-in-with-apple = "1.0.2"
tauri-plugin-google-signin = { path = "../../tauri-plugin-google-signin" }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

anyhow = "1.0.93"
rmp-serde = "1.3.0"
tokio = { version = "1.41.1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
trim-paths = true
